website/websites/u64q/code/regexdna.5.shedskin.log

Mon, 13 Nov 2017 16:00:03 GMT

MAKE:
make[1]: Vstupuje se do adresáře „/home/dundee/workspace/benchmarksgame/bencher/tmp/regexdna/tmp“
cp regexdna.shedskin-5.shedskin shed.py
shedskin shed.py
*** SHED SKIN Python-to-C++ Compiler 0.9.4 ***
Copyright 2005-2011 Mark Dufour; License GNU GPL version 3 (See LICENSE)

[analyzing types..]
0% ********************************100% ********************************100% ********************************100%
[generating c++ code..]
*WARNING* shed.py:29: unresolved call to 'write'
*WARNING* shed.py:37: unresolved call to 'write'
*WARNING* shed.py:38: unresolved call to 'write'
*WARNING* shed.py:39: unresolved call to 'write'
*WARNING* shed.py:40: unresolved call to 'write'
[elapsed time: 1.35 seconds]
make
make[2]: Vstupuje se do adresáře „/home/dundee/workspace/benchmarksgame/bencher/tmp/regexdna/tmp“
g++  -O2 -march=native -Wno-deprecated  -I. -I/usr/lib/python2.7/site-packages/shedskin/lib /home/dundee/workspace/benchmarksgame/bencher/tmp/regexdna/tmp/shed.cpp /usr/lib/python2.7/site-packages/shedskin/lib/sys.cpp /usr/lib/python2.7/site-packages/shedskin/lib/re.cpp /usr/lib/python2.7/site-packages/shedskin/lib/builtin.cpp -lgc -lpcre  -o shed
/home/dundee/workspace/benchmarksgame/bencher/tmp/regexdna/tmp/shed.cpp: In function ‘void* __shed__::__ss_main()’:
/home/dundee/workspace/benchmarksgame/bencher/tmp/regexdna/tmp/shed.cpp:32:26: error: cannot convert ‘__shedskin__::file::write’ from type ‘void* (__shedskin__::file::)(__shedskin__::str*)’ to type ‘void*’
     write = __ss_stdout->write;
                          ^~~~~
make[2]: *** [Makefile:19: shed] Chyba 1
make[2]: Opouští se adresář „/home/dundee/workspace/benchmarksgame/bencher/tmp/regexdna/tmp“
make[1]: *** [/home/dundee/workspace/benchmarksgame/bencher/makefiles/my.linux.Makefile:30: regexdna.shedskin-5.shedskin_run] Chyba 2
make[1]: Opouští se adresář „/home/dundee/workspace/benchmarksgame/bencher/tmp/regexdna/tmp“
8.22s to complete and log all make actions

COMMAND LINE:
./shed 0 < regexdna-input10000.txt

MAKE ERROR 

